GCC Bugzilla – Bug 9263
ICE caused by invalid PARAMETER in implied DO loop
Last modified: 2003-09-23 22:14:17 UTC
Symbolic integer constant declared via PARAMETER not explicitly declared as INTEGER (and not implicitly of type INTEGER) causes ICE if used as a limit in an implied DO loop. Release: 3.4 20030105 (experimental) Environment: System: FreeBSD arcturus.student.iastate.edu 4.7-STABLE FreeBSD 4.7-STABLE #18: Mon Dec 16 17:03:58 CST 2002 kparz@arcturus.student.iastate.edu:/usr/obj/usr/src/sys/ARCTURUS i386 host: i386-unknown-freebsd4.7 build: i386-unknown-freebsd4.7 target: i386-unknown-freebsd4.7 configured with: How-To-Repeat: PARAMETER (P=10) INTEGER C(10) DATA (C(I),I=1,P) /10*10/ END
Fix: Use appropriate type-statements or implicit declarations. See http://gcc.gnu.org/ml/gcc-patches/2003-04/msg00370.html for a patch.
Responsible-Changed-From-To: unassigned->toon Responsible-Changed-Why: Fortran Maintainer.
State-Changed-From-To: open->analyzed State-Changed-Why: Checked this on powerpc-unknown-linux-gnu - has always been wrong.
From: "Billinghurst, David (CRTS)" <David.Billinghurst@riotinto.com> To: <gcc-gnats@gcc.gnu.org> Cc: Subject: Re: fortran/9263: ICE caused by invalid PARAMETER in implied DO loop Date: Mon, 7 Apr 2003 10:23:32 +1000 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=3Dview%20audit-trail&database=3D= gcc&pr=3D9263 Bud Davis has a patch for this - = http://gcc.gnu.org/ml/gcc-patches/2003-04/msg00370.html
State-Changed-From-To: analyzed->closed State-Changed-Why: Fixed by Bud Davis for GCC/g77 3.3 (and by implication, for 3.4).