re PR fortran/9263 (ICE caused by invalid PARAMETER in implied DO loop)

2003-04-11  Bud Davis <bdavis9659@comcast.net>

	PR Fortran/9263
	* gcc/f/data.c (ffedata_advance_): Check initial, final and
	increment values for INTEGER typeness.
	PR Fortran/1832
	* libf2c/libI77/iio.c (z_putc): Check for overflowing length
	of output string.
	* gcc/f/news.texi: Document these fixes.

From-SVN: r65476